# django-helseid

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  dummy_server_metadata.json  pyproject.toml
.github/workflows/: ci.yml  publish.yml
core/core/: settings.py
django-helseid/core/: settings.py
django-helseid/helseid/: apps.py  backends.py  checks.py  middleware.py  models.py  tests.py  urls.py  utils.py  views.py
django-helseid/helseid/migrations/: 0001_initial.py
django-helseid/helseid/templates/helseid/: home.html
src/core/: settings.py  settings_ci.py  urls.py
src/helseid/: admin.py  apps.py  backends.py  checks.py  models.py  tests.py  urls.py  utils.py  views.py
src/helseid/templates/helseid/: home.html
